CSS Grid does not allow masonry which sucks but I suppose regular grid is better that an unnecessarily complicated mess to fix tiny gaps

--- a/src/styles/components/_AddPoster.scss
+++ b/src/styles/components/_AddPoster.scss
@@ -10,8 +10,8 @@
     width: 7rem;
 
     position: fixed;
-    bottom: 6rem;
-    right: 6rem;
+    bottom: 4rem;
+    right: 4rem;
     z-index: 200;
     text-align: center;
 
