--- a/src/styles/components/_PosterBoard.scss
+++ b/src/styles/components/_PosterBoard.scss
@@ -2,9 +2,11 @@
   display: grid;
   grid-template-columns: repeat( auto-fit, minmax(28rem, 1fr) );
   grid-column-gap: 2%;
-  grid-row-gap: 1rem;
+  grid-row-gap: .8rem;
 
   &-tile {
+    // display: flex;
+    // align-items: center;
     cursor: pointer;
     transition: all .2s;
 
@@ -35,7 +37,7 @@
     width: 100%;
     z-index: 300;
 
-    background-color: rgba($color-black, 0.8);
+    background-color: rgba($color-black, 0.85);
     cursor: pointer;
 
     opacity: 0;
@@ -43,7 +45,7 @@
     transition: all .6s;
 
     &__image {
-      height: 90vh;
+      height: 94vh;
       z-index: 350;
     }
   }
